--- a/app/imports/ui/pages/about.html
+++ b/app/imports/ui/pages/about.html
@@ -1,5 +1,5 @@
-<template name="User_Home_Page">
-  <div class="ui left aligned centered grid text container">
+<template name="About">
+  <div class="ui left aligned grid text container">
 
     <div class="four wide column">
       <img class="ui small circular image" src="/images/profilepic.jpg"/>
@@ -17,13 +17,10 @@
     </div>
 
     <div class="twelve wide column">
-      <h1>Welcome!</h1>
-      <p>This is your home page! From here, you can edit your profile,
-        read your about page and even check your current helper rating.</p>
-      <p>When you're ready to explore, feel free to click any of the links up top!</p>
+      <h1>It's all About me</h1>
+      <p>My name is Anthony Kuloloia and I'm a Computer Science major at UH of Manoa.</p>
 
     </div>
-
 
   </div>
 </template>
