Added working buttons and routed them to the correct pages

--- a/app/imports/ui/pages/add-sensei.html
+++ b/app/imports/ui/pages/add-sensei.html
@@ -1,4 +1,4 @@
-<template name="events">
+<template name="Add_Sensei">
   <div class="ui left aligned grid text container">
 
     <div class="four wide column">
@@ -17,9 +17,15 @@
     </div>
 
     <div class="twelve wide column">
-      <h2>Make a Session</h2>
-      <p>Here you can add, edit and remove any sessions you wish to create with other ICS students.  To begin, please click on a date.</p>
-      <div id="events-calendar" style="padding-top: 10px"></div>
+      <h1>Add Class</h1>
+      <div class="ui input focus">
+        <input type="text" placeholder="Class...">
+      </div>
+      <div class="ui button add-sensei">
+        Add
+      </div>
+
     </div>
+
   </div>
 </template>
