--- a/app/imports/ui/pages/user-profile-page.html
+++ b/app/imports/ui/pages/user-profile-page.html
@@ -4,13 +4,13 @@
     <div class="four wide column">
       <img class="ui small circular image" src="/images/profilepic.jpg"/>
       <div class="ui segments">
-        <div class="ui segment">
+        <div class="ui button about">
           <p class="item">About</p>
         </div>
-        <div class="ui segment">
+        <div class="ui button rating">
           <p class="item">Rating</p>
         </div>
-        <div class="ui segment">
+        <div class="ui button edit">
           <p class="item">Edit</p>
         </div>
       </div>
@@ -46,7 +46,7 @@
         {{> Loading}}
       {{/if}}
 
-      <div class="ui button">Add</div>
+      <div class="ui button sensei">Add</div>
 
       <h1>Grasshopper (Receive Help)</h1>
 
@@ -76,7 +76,7 @@
         {{> Loading}}
       {{/if}}
 
-      <div class="ui button">Add</div>
+      <div class="ui button grass">Add</div>
 
     </div>
 
