--- a/app/imports/ui/pages/rating.html
+++ b/app/imports/ui/pages/rating.html
@@ -1,4 +1,4 @@
-<template name="events">
+<template name="rating">
   <div class="ui left aligned grid text container">
 
     <div class="four wide column">
@@ -17,9 +17,8 @@
     </div>
 
     <div class="twelve wide column">
-      <h2>Make a Session</h2>
-      <p>Here you can add, edit and remove any sessions you wish to create with other ICS students.  To begin, please click on a date.</p>
-      <div id="events-calendar" style="padding-top: 10px"></div>
+      <h2>Strive for the Top!!</h2>
+      <p>Your weekly ranking may be viewed here.</p>
     </div>
   </div>
 </template>
