Updated landing page and sessions page

--- a/app/imports/ui/pages/public-landing-page.html
+++ b/app/imports/ui/pages/public-landing-page.html
@@ -1,7 +1,7 @@
 <template name="Public_Landing_Page">
   <div class="ui container">
 
-      <img class="ui fluid image" src="/images/studybuddy.jpg"/>
+      <img class="ui fluid image" src="/images/gg.jpg"/>
 
   </div>
 </template>
