--- a/app/imports/ui/pages/add-session.html
+++ b/app/imports/ui/pages/add-session.html
@@ -11,12 +11,20 @@
               <div class="form-group">
                 <div class="row">
                   <div class="col-xs-12 col-sm-3">
-                    <label for="start">Event Starts (YYYY-MM-DD)</label>
+                    <label for="start">Day the Session will start (YYYY-MM-DD)</label>
                     <input type="text" name="start" class="form-control" value="{{event.start}}">
                   </div>
                   <div class="col-xs-12 col-sm-3">
-                    <label for="end">Event End (YYYY-MM-DD)</label>
+                    <label for="end">Day the Session will End (YYYY-MM-DD)</label>
                     <input type="text" name="end" class="form-control" value="{{#if event.end}}{{event.end}}{{else}}{{event.start}}{{/if}}">
+                  </div>
+                  <div class="col-xs-12 col-sm-3">
+                    <label for="end">Time the Session will start (XX:XX am/pm)</label>
+                    <input type="text" name="stime" class="form-control" value="{{event.stime}}">
+                  </div>
+                  <div class="col-xs-12 col-sm-3">
+                    <label for="end">Time the Session will End (XX:XX am/pm)</label>
+                    <input type="text" name="etime" class="form-control" value="{{event.etime}}">
                   </div>
                 </div>
               </div>
