Update to add session page

--- a/app/imports/ui/pages/add-session.html
+++ b/app/imports/ui/pages/add-session.html
@@ -4,7 +4,7 @@
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h4 class="modal-title" id="add-edit-event">Add Event</h4>
+            <h2 class="modal-title" id="add-edit-event">Add Session</h2>
           </div>
           <form id="add-edit-event-form">
             <div class="modal-body">
