--- a/app/imports/ui/pages/add-session.html
+++ b/app/imports/ui/pages/add-session.html
@@ -1,47 +1,36 @@
 <template name="Add_Session">
-  <div class="ui container">
-    <div class="modal fade" id="add-edit-event-modal" tabindex="-1" role="dialog" aria-labelledby="add-edit-event-modal">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h2 class="modal-title" id="add-edit-event">Add Session</h2>
-          </div>
-          <form id="add-edit-event-form">
-            <div class="modal-body">
-              <div class="form-group">
-                <div class="row">
-                  <div class="col-xs-12 col-sm-3">
-                    <label for="start">Day the Session will start (YYYY-MM-DD)</label>
-                    <input type="text" name="start" class="form-control" value="{{event.start}}">
-                  </div>
-                  <div class="col-xs-12 col-sm-3">
-                    <label for="end">Day the Session will End (YYYY-MM-DD)</label>
-                    <input type="text" name="end" class="form-control" value="{{#if event.end}}{{event.end}}{{else}}{{event.start}}{{/if}}">
-                  </div>
-                  <div class="col-xs-12 col-sm-3">
-                    <label for="end">Time the Session will start (XX:XX am/pm)</label>
-                    <input type="text" name="stime" class="form-control" value="{{event.stime}}">
-                  </div>
-                  <div class="col-xs-12 col-sm-3">
-                    <label for="end">Time the Session will End (XX:XX am/pm)</label>
-                    <input type="text" name="etime" class="form-control" value="{{event.etime}}">
-                  </div>
-                </div>
-              </div>
-              <div class="form-group">
-                <label for="title">Event Title</label>
-                <input type="text" name="title" class="form-control" value="{{event.title}}">
-              </div>
-            </div>
-            <div class="modal-footer">
-              {{#if modalType 'edit'}}
-                <button class="btn btn-danger pull-left delete-event">Delete Event</button>
-              {{/if}}
-              <button type="click" class="btn btn-default" data-dismiss="modal">Cancel</button>
-              <button type="submit" class="btn btn-success">Add Event</button>
-            </div>
-          </form>
+
+  <div class="modal fade" id="add-edit-event-modal" tabindex="-1" role="dialog" aria-labelledby="add-edit-event-modal">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+              aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title" id="add-edit-event">{{modalLabel.label}} Event</h4>
         </div>
+        <form id="add-edit-event-form">
+          <div class="modal-body">
+
+            <label for="title">Event Title</label>
+            <input type="text" name="title" class="form-control" value="{{event.title}}">
+
+            <label for="start">Event Starts</label>
+            <input disabled type="text" name="start" class="form-control" value="{{event.start}}">
+
+            <label for="end">Event End</label>
+            <input disabled type="text" name="end" class="form-control"
+                   value="{{#if event.end}}{{event.end}}{{else}}{{event.start}}{{/if}}">
+
+
+          </div>
+          <div class="modal-footer">
+            {{#if modalType 'edit'}}
+              <button class="btn btn-danger pull-left delete-event">Delete Event</button>
+            {{/if}}
+            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+            <button type="submit" class="btn btn-success">{{modalLabel.button}} Event</button>
+          </div>
+        </form>
       </div>
     </div>
   </div>
