--- a/app/imports/ui/pages/events.html
+++ b/app/imports/ui/pages/events.html
@@ -1,5 +1,7 @@
 <template name="events">
   <div class="ui container">
+    <h4>Create a Session</h4>
+    <p>Here you can add, edit and remove a session from your current calendar!  To begin, please select a date.</p>
     {{> Add_Session }}
     <div id="events-calendar"></div>
   </div>
