Added tutorial feature
Simple alerts so far, will attempt to implement message boxes in the
future.

--- a/app/imports/ui/pages/user-home-page.html
+++ b/app/imports/ui/pages/user-home-page.html
@@ -25,9 +25,22 @@
 
     </div>
     </div>
+
   {{else}}
     <div class="ui container">
       <h2 class="ui centered header">Please log in to access this page.</h2>
     </div>
   {{/if}}
+  <script>
+    //      document.onreadystatechange = function() {
+    //        if (document.readyState == 'complete') {
+    //          alert('This is your home page! From here, you can edit your profile,read your about page and even check your current helper rating. When you\'re ready to explore, feel free to click any of the links up top!');
+    //        }
+    //        ;
+    //      }
+//    $(window).load(function(){
+//      alert('This is your home page! From here, you can edit your profile,read your about page and even check your current helper rating. When you\'re ready to explore, feel free to click any of the links up top!');
+//    });
+  </script>
+
 </template>
