--- a/app/imports/ui/pages/about.html
+++ b/app/imports/ui/pages/about.html
@@ -1,4 +1,5 @@
 <template name="About">
+  {{#if currentUser}}
   <div class="ui left aligned grid text container">
 
     <div class="four wide column">
@@ -23,4 +24,9 @@
     </div>
 
   </div>
+  {{else}}
+    <div class="ui container">
+      <h2 class="ui centered header">Please log in to access this page.</h2>
+    </div>
+  {{/if}}
 </template>
