--- a/app/imports/ui/pages/add-session.html
+++ b/app/imports/ui/pages/add-session.html
@@ -1,5 +1,5 @@
 <template name="Add_Session">
-
+{{#if currentUser}}
   <div class="modal fade" id="add-edit-event-modal" tabindex="-1" role="dialog" aria-labelledby="add-edit-event-modal">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
@@ -40,4 +40,9 @@
       </div>
     </div>
   </div>
+{{else}}
+  <div class="ui container">
+    <h2 class="ui centered header">Please log in to access this page.</h2>
+  </div>
+{{/if}}
 </template>
