--- a/app/imports/ui/pages/rankings-page.html
+++ b/app/imports/ui/pages/rankings-page.html
@@ -1,4 +1,5 @@
 <template name="Rankings_Page">
+  {{#if currentUser}}
   <div class="ui container">
     <h2 class="ui dividing header">Rankings</h2>
     <table style="margin-top: 20px;" class="ui celled table ">
@@ -28,4 +29,9 @@
       </tbody>
     </table>
     </div>
+  {{else}}
+    <div class="ui container">
+      <h2 class="ui centered header">Please log in to access this page.</h2>
+    </div>
+  {{/if}}
 </template>
