--- a/app/imports/ui/pages/rating.html
+++ b/app/imports/ui/pages/rating.html
@@ -1,4 +1,5 @@
 <template name="rating">
+  {{#if currentUser}}
   <div class="ui left aligned grid text container">
 
     <div class="four wide column">
@@ -21,4 +22,9 @@
       <p>Your weekly ranking may be viewed here.</p>
     </div>
   </div>
+  {{else}}
+    <div class="ui container">
+      <h2 class="ui centered header">Please log in to access this page.</h2>
+    </div>
+  {{/if}}
 </template>
