--- a/app/imports/ui/pages/rankings-page.html
+++ b/app/imports/ui/pages/rankings-page.html
@@ -1,37 +1,49 @@
 <template name="Rankings_Page">
   {{#if currentUser}}
   <div class="ui container">
-    <h2 class="ui dividing header">Rankings</h2>
-    <table style="margin-top: 20px;" class="ui celled table ">
+    <h2 class="ui centered dividing header">Rankings</h2>
+    <table style="margin-top: 20px;" class="ui compact celled striped definition table ">
       <thead>
       <tr>
+        <th></th>
         <th>Username</th>
-        <th>Score</th>
+        <th>Stars</th>
+        <th>Grasshopper Sessions</th>
+        <th>Sensei Sessions</th>
       </tr>
       </thead>
       <tbody>
       <tr>
-        <td><a href="#">John Doe</a></td>
+        <td>1</td>
+        <td><a href="#">dppavao</a></td>
+        <td>50</td>
+        <td>10</td>
         <td>100</td>
       </tr>
       <tr>
-        <td><a href="#">Jane Doe</a></td>
+        <td>2</td>
+        <td><a href="#">akuloloi</a></td>
+        <td>40</td>
         <td>10</td>
+        <td>50</td>
       </tr>
       <tr>
-        <td><a href="#">John Roe</a></td>
-        <td>1</td>
-      </tr>
-      <tr>
-        <td><a href="#">Jane Roe</a></td>
-        <td>0</td>
+        <td>3</td>
+        <td><a href="#">jchock</a></td>
+        <td>30</td>
+        <td>100</td>
+        <td>6</td>
       </tr>
       </tbody>
     </table>
     </div>
+
+
   {{else}}
     <div class="ui container">
       <h2 class="ui centered header">Please log in to access this page.</h2>
     </div>
   {{/if}}
+
+
 </template>
