Updated calendar and added correct implementation of notifications

--- a/app/imports/ui/pages/add-session.html
+++ b/app/imports/ui/pages/add-session.html
@@ -1,48 +1,51 @@
 <template name="Add_Session">
-{{#if currentUser}}
-  <div class="modal fade" id="add-edit-event-modal" tabindex="-1" role="dialog" aria-labelledby="add-edit-event-modal">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
-              aria-hidden="true">&times;</span></button>
-          <h4 class="modal-title" id="add-edit-event">{{modalLabel.label}} Event</h4>
+  {{#if currentUser}}
+    <div class="ui container">
+      <div class="modal fade" id="add-edit-event-modal" tabindex="-1" role="dialog"
+           aria-labelledby="add-edit-event-modal">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                  aria-hidden="true">&times;</span></button>
+              <h4 class="modal-title" id="add-edit-event">{{modalLabel.label}} Event</h4>
+            </div>
+            <form id="add-edit-event-form">
+              <div class="modal-body">
+
+                <label for="title">Event Title</label>
+                <input type="text" name="title" class="form-control" value="{{event.title}}">
+
+                <label for="start">Event Starts</label>
+                <input disabled type="text" name="start" class="form-control" value="{{event.start}}">
+
+                <label for="end">Event End</label>
+                <input disabled type="text" name="end" class="form-control"
+                       value="{{#if event.end}}{{event.end}}{{else}}{{event.start}}{{/if}}">
+
+                <label for="type">Classification</label>
+                <select name="type" class="form-control">
+                  <option selected="{{selected event.type 'Grasshopper' }}" value="Grasshopper">Grasshopper</option>
+                  <option selected="{{selected event.type 'Sensei' }}" value="Sensei">Sensei</option>
+                </select>
+
+
+              </div>
+              <div class="modal-footer">
+                {{#if modalType 'edit'}}
+                  <button class="btn btn-danger pull-left delete-event">Delete Event</button>
+                {{/if}}
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                <button type="submit" class="btn btn-success">{{modalLabel.button}} Event</button>
+              </div>
+            </form>
+          </div>
         </div>
-        <form id="add-edit-event-form">
-          <div class="modal-body">
-
-            <label for="title">Event Title</label>
-            <input type="text" name="title" class="form-control" value="{{event.title}}">
-
-            <label for="start">Event Starts</label>
-            <input disabled type="text" name="start" class="form-control" value="{{event.start}}">
-
-            <label for="end">Event End</label>
-            <input disabled type="text" name="end" class="form-control"
-                   value="{{#if event.end}}{{event.end}}{{else}}{{event.start}}{{/if}}">
-
-            <label for="type">Classification</label>
-            <select name="type" class="form-control">
-              <option selected="{{selected event.type 'Grasshopper' }}" value="Grasshopper">Grasshopper</option>
-              <option selected="{{selected event.type 'Sensei' }}" value="Sensei">Sensei</option>
-            </select>
-
-
-          </div>
-          <div class="modal-footer">
-            {{#if modalType 'edit'}}
-              <button class="btn btn-danger pull-left delete-event">Delete Event</button>
-            {{/if}}
-            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-            <button type="submit" class="btn btn-success">{{modalLabel.button}} Event</button>
-          </div>
-        </form>
       </div>
     </div>
-  </div>
-{{else}}
-  <div class="ui container">
-    <h2 class="ui centered header">Please log in to access this page.</h2>
-  </div>
-{{/if}}
+  {{else}}
+    <div class="ui container">
+      <h2 class="ui centered header">Please log in to access this page.</h2>
+    </div>
+  {{/if}}
 </template>
