--- a/app/imports/ui/pages/help-page.html
+++ b/app/imports/ui/pages/help-page.html
@@ -3,7 +3,7 @@
     <div class="ui container">
       <h1 class="ui dividing header">Help</h1>
       <h4 class="ui header">Here you can see what each page is for and how to use them, in case you forgot.</h4>
-      <a href="#"><h2 class="ui dividing header">Home</h2></a>
+      <h2 class="ui dividing header">Home</h2>
       <h5 class="ui header">This is your home page! From here, you can edit your profile,
         read your about page and even check your current helper rating.</h5>
       <h2 class="ui dividing header">Profile</h2>
