--- a/app/imports/ui/pages/rating.html
+++ b/app/imports/ui/pages/rating.html
@@ -1,27 +1,34 @@
 <template name="rating">
   {{#if currentUser}}
-  <div class="ui left aligned grid text container">
+    <div class="ui left aligned grid text container">
 
-    <div class="four wide column">
-      <img class="ui small circular image" src="/images/profilepic.jpg"/>
-      <div class="ui segments">
-        <div class="ui button about">
-          <p class="item">About</p>
-        </div>
-        <div class="ui button rating">
-          <p class="item">Rating</p>
-        </div>
-        <div class="ui button edit">
-          <p class="item">Edit</p>
+      <div class="four wide column">
+        <img class="ui small circular image" src="/images/profilepic.jpg"/>
+        <div class="ui segments">
+          <div class="ui button about">
+            <p class="item">About</p>
+          </div>
+          <div class="ui button rating">
+            <p class="item">Rating</p>
+          </div>
+          <div class="ui button edit">
+            <p class="item">Edit</p>
+          </div>
         </div>
       </div>
-    </div>
 
-    <div class="twelve wide column">
-      <h2>Strive for the Top!!</h2>
-      <p>Your weekly ranking may be viewed here.</p>
+      <div class="twelve wide column">
+        <h2>This is a temporary replacement</h2>
+        <p>Enter a rank for this user here.</p>
+        <form class="ui form rating-form">
+          <div class="field">
+            <label>Rating</label>
+              <input type="number" min="0" max="5" name="rating" placeholder="Enter Rating 1-5"/>
+              <button class="ui button" type="submit">Add Rating</button>
+          </div>
+        </form>
+      </div>
     </div>
-  </div>
   {{else}}
     <div class="ui container">
       <h2 class="ui centered header">Please log in to access this page.</h2>
