Added sid navbar

--- a/app/imports/ui/pages/edit-profile.html
+++ b/app/imports/ui/pages/edit-profile.html
@@ -3,7 +3,7 @@
   <div class="ui left aligned grid text container">
 
     <div class="four wide column">
-      <img class="ui small circular image" src="/images/profilepic.jpg"/>
+      <img class="ui small circular image" src="http://i.imgur.com/LikUNLc.png"/>
       <div class="ui segments">
         <div class="ui button about">
           <p class="item">About</p>
