--- a/app/imports/ui/pages/user-home-page.html
+++ b/app/imports/ui/pages/user-home-page.html
@@ -1,9 +1,9 @@
 <template name="User_Home_Page">
   {{#if currentUser}}
-    <div class="ui left aligned centered grid text container">
+    <div class="ui grid">
 
-    <div class="four wide column">
-      <img class="ui small circular image" src="/images/profilepic.jpg"/>
+    <div class="two wide column">
+      <img class="ui small circular image" src="http://i.imgur.com/LikUNLc.png"/>
       <div class="ui segments">
         <div class="ui button about">
           <p class="item">About</p>
