--- a/app/imports/ui/pages/events.html
+++ b/app/imports/ui/pages/events.html
@@ -1,8 +1,10 @@
 <template name="events">
-  <div class="ui container">
-    <h1>Create a Session</h1>
-    <p>Here you can add, edit and remove a session from your current calendar! To begin, please select a date.</p>
-    <div id="events-calendar"></div>
-    {{> Add_Session }}
+  <div class="ui grid">
+    <div class="twelve wide column">
+      <h1>Create a Session</h1>
+      <p>Here you can add, edit and remove a session from your current calendar! To begin, please select a date.</p>
+      <div id="events-calendar"></div>
+      {{> Add_Session }}
+    </div>
   </div>
 </template>
