--- a/app/imports/ui/pages/events.html
+++ b/app/imports/ui/pages/events.html
@@ -1,10 +1,16 @@
 <template name="events">
-  <div class="ui grid">
-    <div class="twelve wide column">
-      <h1>Create a Session</h1>
-      <p>Here you can add, edit and remove a session from your current calendar! To begin, please select a date.</p>
-      <div id="events-calendar"></div>
-      {{> Add_Session }}
+  {{#if currentUser}}
+    <div class="ui grid">
+      <div class="twelve wide column">
+        <h1>Create a Session</h1>
+        <p>Here you can add, edit and remove a session from your current calendar! To begin, please select a date.</p>
+        <div id="events-calendar"></div>
+        {{> Add_Session }}
+      </div>
     </div>
-  </div>
+  {{else}}
+    <div class="ui container">
+      <h2 class="ui centered header">Please log in to access this page.</h2>
+    </div>
+  {{/if}}
 </template>
