--- a/app/imports/ui/pages/user-profile-page.html
+++ b/app/imports/ui/pages/user-profile-page.html
@@ -1,87 +1,90 @@
 <template name="User_Profile_Page">
   {{#if currentUser}}
-  <div class="ui grid">
+    <div class="ui grid">
 
-    <div class="two wide column">
-      <img class="ui small circular image" src="http://i.imgur.com/LikUNLc.png"/>
-      <div class="ui segments">
-        <div class="ui button about">
-          <p class="item">About</p>
-        </div>
-        <div class="ui button rating">
-          <p class="item">Rating</p>
-        </div>
-        <div class="ui button edit">
-          <p class="item">Edit</p>
+      <div class="three wide column">
+        <img class="ui small circular image" src="http://i.imgur.com/LikUNLc.png"/>
+        <div style="width:200px" class="ui vertical menu">
+          <a class="item" href="{{pathFor 'about'}}">
+            About
+          </a>
+          <a class="item" href="{{pathFor 'Rankings_Page'}}">
+            Rating
+          </a>
+          <a class="item" href="{{pathFor 'Edit_Profile'}}">
+            Edit
+          </a>
+          <a class="item cas-logout">
+            Logout
+          </a>
         </div>
       </div>
-    </div>
 
-    <div class="twelve wide column">
-      <h1>Hiya!</h1>
-      <p>This is your profile! Here you may edit the courses you have taken and for which you are willing to provide
-        help for! You may also select which classes you are currently taking and for which you may need help!</p>
-      <h1>Sensei (Provide Help)</h1>
+      <div class="twelve wide column">
+        <h1>Hiya!</h1>
+        <p>This is your profile! Here you may edit the courses you have taken and for which you are willing to provide
+          help for! You may also select which classes you are currently taking and for which you may need help!</p>
+        <h1>Sensei (Provide Help)</h1>
 
-      {{#if Template.subscriptionsReady}}
-        <table style="margin-top: 20px" class="ui celled table">
-          <thead>
-          <tr>
-            <th>Class</th>
-          </tr>
-          </thead>
-
-          <tbody>
-          <tr>
-            <td>ICS 311</td>
-          </tr>
-          {{#each contact in ContactsList}}
+        {{#if Template.subscriptionsReady}}
+          <table style="margin-top: 20px" class="ui celled table">
+            <thead>
             <tr>
-              <td>{{sensei.class}}</td>
-              <td><a href="{{pathFor 'Edit_Sensei' _id=contact._id}}">Edit</a></td>
+              <th>Class</th>
             </tr>
-          {{/each}}
-          </tbody>
-        </table>
-      {{else}}
-        {{> Loading}}
-      {{/if}}
+            </thead>
 
-      <div class="ui button sensei">Add</div>
-
-      <h1>Grasshopper (Receive Help)</h1>
-
-      {{#if Template.subscriptionsReady}}
-        <table style="margin-top: 20px" class="ui celled table">
-          <thead>
-          <tr>
-            <th>Class</th>
-          </tr>
-          </thead>
-
-          <tbody>
-          <tr>
-            <td>
-              ICS 111
-            </td>
-          </tr>
-          {{#each contact in ContactsList}}
+            <tbody>
             <tr>
-              <td>{{grasshopper.class}}</td>
-              <td><a href="{{pathFor 'Edit_Grasshopper' _id=contact._id}}">Edit</a></td>
+              <td>ICS 311</td>
             </tr>
-          {{/each}}
-          </tbody>
-        </table>
-      {{else}}
-        {{> Loading}}
-      {{/if}}
+            {{#each contact in ContactsList}}
+              <tr>
+                <td>{{sensei.class}}</td>
+                <td><a href="{{pathFor 'Edit_Sensei' _id=contact._id}}">Edit</a></td>
+              </tr>
+            {{/each}}
+            </tbody>
+          </table>
+        {{else}}
+          {{> Loading}}
+        {{/if}}
 
-      <div class="ui button grass">Add</div>
+        <div class="ui button sensei">Add</div>
+
+        <h1>Grasshopper (Receive Help)</h1>
+
+        {{#if Template.subscriptionsReady}}
+          <table style="margin-top: 20px" class="ui celled table">
+            <thead>
+            <tr>
+              <th>Class</th>
+            </tr>
+            </thead>
+
+            <tbody>
+            <tr>
+              <td>
+                ICS 111
+              </td>
+            </tr>
+            {{#each contact in ContactsList}}
+              <tr>
+                <td>{{grasshopper.class}}</td>
+                <td><a href="{{pathFor 'Edit_Grasshopper' _id=contact._id}}">Edit</a></td>
+              </tr>
+            {{/each}}
+            </tbody>
+          </table>
+        {{else}}
+          {{> Loading}}
+        {{/if}}
+
+        <div class="ui button grass">Add</div>
+
+      </div>
 
     </div>
-
-  </div>
   {{else}}
     <div class="ui container">
       <h2 class="ui centered header">Please log in to access this page.</h2>
