Reformatted Public landing page

--- a/app/imports/ui/pages/public-landing-page.html
+++ b/app/imports/ui/pages/public-landing-page.html
@@ -1,15 +1,15 @@
 <template name="Public_Landing_Page">
-  <div class="ui relaxed grid container">
-    <img style="padding-left: 0; padding-right: 0; max-height: 500px;" class="ui fluid image" src="/images/gg.jpg"/>
+  <div class="ui grid">
+    <img style="padding-top: 15px; padding-left: 0; padding-right: 0; max-height: 500px;" class="ui fluid image" src="/images/gg.jpg"/>
     <div class="eight wide column" style="background: deepskyblue;">
-      <h2 class="ui centered header">About Get Good:</h2>
-      <h4 class="ui centered header">Get Good is an app that will help you find people to study with!</h4>
-      <h4 class="ui centered header">Get the help you need from knowledgeable individuals!</h4>
+      <h2>About Get Good:</h2>
+      <h4>Get Good is an app that will help you find people to study with!</h4>
+      <h4>Get the help you need from knowledgeable individuals!</h4>
     </div>
     <div class="eight wide column" style="background: blueviolet;">
-      <h2 class="ui centered header">How to use Get Good:</h2>
-      <h4 class="ui centered header">Log in with your UH login and password and we'll get you started!</h4>
-      <h4 class="ui centered header">There will be a tutorial for new users.</h4>
+      <h2>How to use Get Good:</h2>
+      <h4>Log in with your UH login and password and we'll get you started!</h4>
+      <h4>There will be a tutorial for new users.</h4>
     </div>
   </div>
 
