--- a/app/imports/ui/pages/add-session.html
+++ b/app/imports/ui/pages/add-session.html
@@ -1,6 +1,7 @@
 <template name="Add_Session">
   <div class="ui grid">
     <div class="sixteen wide column">
+      <div style="margin-left:300px; width: 800px; height: 460px" class="modal fade" id="add-edit-event-modal" tabindex="-1" role="dialog"
            aria-labelledby="add-edit-event-modal">
         <div class="modal-dialog" role="document">
           <div class="modal-content">
