--- a/app/imports/ui/pages/rankings-page.html
+++ b/app/imports/ui/pages/rankings-page.html
@@ -1,8 +1,11 @@
 <template name="Rankings_Page">
   {{#if currentUser}}
     <div class="ui grid">
+
       <div class="three wide column">
-        <img class="ui small circular image" src="http://i.imgur.com/LikUNLc.png"/>
+        {{#each profile in ProfileList}}
+          <img class="ui small circular image" src="{{profile.pic}}"/>
+        {{/each}}
         <div style="width:200px" class="ui vertical menu">
           <a class="item" href="{{pathFor 'about'}}">
             About
@@ -10,8 +13,8 @@
           <a class="item" href="{{pathFor 'Rankings_Page'}}">
             Rating
           </a>
-          <a class="item" href="{{pathFor 'Edit_Profile'}}">
-            Edit
+          <a class="item" href="{{pathFor 'User_Profile_Page'}}">
+            Profile
           </a>
           <a class="item cas-logout">
             Logout
