Added user specific profiles and use of profile pictures as long as the user provies a url

--- a/app/imports/ui/pages/about.html
+++ b/app/imports/ui/pages/about.html
@@ -23,7 +23,7 @@
       </div>
 
       <div class="twelve wide column">
-        <h1>It's all About me</h1>
+        <h1>About me</h1>
         {{#each profile in ProfileList}}
           <p>{{profile.about}}</p>
         {{/each}}
