--- a/app/imports/ui/pages/user-profile-page.html
+++ b/app/imports/ui/pages/user-profile-page.html
@@ -42,7 +42,7 @@
             <tbody>
             {{#each profile in ProfileList}}
               <tr>
-                <td>{{profile.pic}}</td>
+                <td><img class="ui small circular image" src="{{profile.pic}}"/></td>
                 <td>{{profile.about}}</td>
                 <td>{{profile.sensei}}</td>
                 <td>{{profile.grass}}</td>
