Fixed small bugs

--- a/app/imports/ui/pages/edit-profile.html
+++ b/app/imports/ui/pages/edit-profile.html
@@ -86,7 +86,7 @@
                 <div class="one field">
                   <div class="field">
                     <input type="text" name="popup" id="popup" placeholder="Yes or No"
-                           value="{{ contactField 'popup' }}">
+                           value="Yes">
                     {{#if displayFieldError 'popup' }}
                       <div class="ui error message">
                         <p>You must specify your grasshopper classes.</p>
