--- a/app/imports/ui/pages/public-landing-page.html
+++ b/app/imports/ui/pages/public-landing-page.html
@@ -1,6 +1,6 @@
 <template name="Public_Landing_Page">
   <div class="ui grid">
-    <img style="padding-top: 15px; padding-left: 0; padding-right: 0; max-height: 500px;" class="ui fluid image" src="/images/gg.jpg"/>
+    <img style="padding-top: 15px; padding-left: 0; padding-right: 0; max-height: 500px;" class="ui fluid image zoom" src="/images/gg.jpg"/>
     <div class="eight wide column" style="background: deepskyblue;">
       <h2>About Get Good:</h2>
       <h4>Get Good is an app that will help you find people to study with!</h4>
