Allow user to disable tutorial

--- a/app/imports/ui/pages/edit-profile.html
+++ b/app/imports/ui/pages/edit-profile.html
@@ -5,7 +5,7 @@
       <div class="three wide column">
         <img class="ui small circular image" src="{{picture.pic}}"/>
         <div style="width:200px" class="ui vertical menu">
-          <a class="item" href="{{pathFor 'about'}}">
+          <a class="item" href="{{pathFor 'About'}}">
             About
           </a>
           <a class="item" href="{{pathFor 'Rankings_Page'}}">
