--- a/app/imports/ui/pages/user-profile-page.html
+++ b/app/imports/ui/pages/user-profile-page.html
@@ -7,7 +7,7 @@
           <img class="ui small circular image" src="{{profile.pic}}"/>
         {{/each}}
         <div style="width:200px" class="ui vertical menu">
-          <a class="item" href="{{pathFor 'about'}}">
+          <a class="item" href="{{pathFor 'About'}}">
             About
           </a>
           <a class="item" href="{{pathFor 'Rankings_Page'}}">
@@ -24,8 +24,6 @@
 
       <div class="twelve wide column">
         <h1>Hiya!</h1>
-        <p>This is your profile! Here you may edit the courses you have taken and for which you are willing to provide
-          help for! You may also select which classes you are currently taking and for which you may need help!</p>
 
         {{#if Template.subscriptionsReady}}
           <table style="margin-top: 20px" class="ui celled table">
