Fixed overlap issue in user-profile

--- a/app/imports/ui/pages/about.html
+++ b/app/imports/ui/pages/about.html
@@ -22,7 +22,7 @@
         </div>
       </div>
 
-      <div class="twelve wide column">
+      <div style="margin-left: 10px;" class="twelve wide column">
         <h1>About me</h1>
         {{#each profile in ProfileList}}
           <p>{{profile.about}}</p>
