--- a/app/imports/ui/pages/rankings-page.html
+++ b/app/imports/ui/pages/rankings-page.html
@@ -22,7 +22,7 @@
         </div>
       </div>
 
-      <div class="twelve wide column">
+      <div style="margin-left: 10px;" class="twelve wide column">
         <h1>Rankings</h1>
         <table style="margin-top: 20px;" class="ui compact celled striped definition table ">
           <thead>
