--- a/app/imports/ui/pages/user-profile-page.html
+++ b/app/imports/ui/pages/user-profile-page.html
@@ -22,7 +22,7 @@
         </div>
       </div>
 
-      <div class="twelve wide column">
+      <div style="margin-left: 10px;" class="twelve wide column">
         <h1>Hiya!</h1>
 
         {{#if Template.subscriptionsReady}}
