Changes to background colors on landing page

--- a/app/imports/ui/pages/public-landing-page.html
+++ b/app/imports/ui/pages/public-landing-page.html
@@ -1,12 +1,12 @@
 <template name="Public_Landing_Page">
   <div class="ui grid">
     <img style="padding-top: 15px; padding-left: 0; padding-right: 0; max-height: 500px;" class="ui fluid image zoom" src="/images/gg.jpg"/>
-    <div class="eight wide column" style="background: deepskyblue;">
+    <div class="eight wide column" style="background: #62463F; color: #D6D6D4;">
       <h2>About Get Good:</h2>
       <h4>Get Good is an app that will help you find people to study with!</h4>
       <h4>Get the help you need from knowledgeable individuals!</h4>
     </div>
-    <div class="eight wide column" style="background: blueviolet;">
+    <div class="eight wide column" style="background: #62463F; color: #D6D6D4;">
       <h2>How to use Get Good:</h2>
       <h4>Log in with your UH login and password and we'll get you started!</h4>
       <h4>There will be a tutorial for new users.</h4>
