--- a/app/imports/ui/pages/rankings-page.html
+++ b/app/imports/ui/pages/rankings-page.html
@@ -30,31 +30,13 @@
             <th></th>
             <th>Username</th>
             <th>Stars</th>
-            <th>Grasshopper Sessions</th>
-            <th>Sensei Sessions</th>
           </tr>
           </thead>
           <tbody>
           <tr>
             <td>1</td>
-            <td><a href="#">dppavao</a></td>
-            <td>50</td>
-            <td>10</td>
-            <td>100</td>
-          </tr>
-          <tr>
-            <td>2</td>
-            <td><a href="#">akuloloi</a></td>
-            <td>40</td>
-            <td>10</td>
-            <td>50</td>
-          </tr>
-          <tr>
-            <td>3</td>
-            <td><a href="#">jchock</a></td>
-            <td>30</td>
-            <td>100</td>
-            <td>6</td>
+            <td>{{ user }}</td>
+            <td>0</td>
           </tr>
           </tbody>
         </table>
